fix layout issues
-background color fits correctly
-add margin to bottom of blogpost to account for footer height

--- a/glitch-dot-cool/src/styles/global.css
+++ b/glitch-dot-cool/src/styles/global.css
@@ -8,3 +8,7 @@
 	box-sizing: inherit;
 	font-family: "Roboto", sans-serif;
 }
+
+body {
+	background-color: #e6e6e6;
+}
